--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -13,30 +13,26 @@
   <h2>Jobs</h2>
   {{show_jobs(jobs)}}
   <h2>Reviews</h2>
-    {%for job in jobs%}
-    {% endfor %}
+    {%for review in reviews%}
+
     <div class="box">
       <article class="media">
         <div class="media-left">
             {% for _ in range(0, review['rating']): %}
-            <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
             {% endfor %}
         </div>
         <div class="media-content">
           <div class="content">
-              <p>
-                  <strong>{{review[title]}}</strong>
-                  <small>{{review[status]}}</small>
-                  <small>{{review[date]}}</small>
-                  {{review[review]}}
-              </p>
+              <strong>{{review['title']}}</strong>
+              <small>{{review['status']}}</small>
+              <small>{{review['date']}}</small>
+              {{review['review']}}
           </div>
         </div>
       </article>
     </div>
-    {# TODO: Remove comment and end for loop
-      {% %}
-    #}
+    {%endfor%}
   <div class="columns">
     <div class="column">
       <a class="button is-info is-pulled-right">Create Review</a>
